# pyaccel

./: .gitignore  CITATION.cff  INSTALL  LICENSE  Makefile  README.md  VERSION  __init__.py  accelerator.py  elements.py  interactive.py  lattice.py  optics.py  pyproject.toml  requirements.txt  setup.py  tracking.py
doc/doxygen/: Doxyfile  Mainpage.dox  Makefile
examples/: create_lattice.ipynb  plot_twiss.ipynb  tracking.ipynb
examples/.ipynb_checkpoints/: plot_twiss-checkpoint.ipynb
pyaccel/: D(e).py  __init__.py  accelerator.py  elements.py  graphics.py  interactive.py  intrabeam_scattering.py  lattice.py  lifetime.py  naff.py  new_lifetime.py  optics.py  tracking.py  utils.py
pyaccel/backends/: __init__.py  _cpp.py  _julia.py
pyaccel/data/: d_touschek.npz
pyaccel/optics/: __init__.py  acceptances.py  beam_envelope.py  driving_terms.py  edwards_teng.py  eq_params.py  intrabeam_scattering.py  miscellaneous.py  rad_integrals.py  twiss.py
test/: flatfile.txt  sirius.py  test_accelerator.py  test_elements.py  test_lattice.py  test_optics.py  test_tracking.py
tests/: runtests.py  sirius.py  test_accelerator.py  test_lattice.py  test_optics.py  test_tracking.py
